// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 21.48046875,
                "lineHeight": 204.23812500000003,
                "position": "absolute",
              }
            }
          >
            T
          </Text>
          <View
            style={
              Object {
                "height": 156,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 146,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                h
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 165.828125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 202.0390625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                being
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 299.017578125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 395.75,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                History
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 519.095703125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 638.486328125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 146,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with no content if content is set as null 1`] = `null`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 24.75,
                "lineHeight": 241.55085937500002,
                "position": "absolute",
              }
            }
          >
            Q
          </Text>
          <View
            style={
              Object {
                "height": 156,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 161,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                S
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 182.357421875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ome
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 262.42578125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                years
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 357.541015625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ago
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 426.763671875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                I
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 445.466796875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                made
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 544.888671875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                the
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 161,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                decision
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 304.560546875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 345.412109375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                take
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 422.6328125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                as
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 469.689453125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 498.18359375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                friend
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 599.75,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 161,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                woman
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 288.494140625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                who
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 364.818359375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 401.029296875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                very
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 475.75390625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an article with heading tags 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 25,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                This is heading 2
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                This is heading 3
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`7. an article with link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Jack Dorsey
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                   said today that while the company was unlikely to open its offices before September, almost all staff could now work permanently from wherever they want.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`8. an article with italic link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  In his 2015 book on the tournaments, 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Superforecasting
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  , Professor Tetlock said the most accurate predictors all used very similar methods. They used a historical “base rate” for predicting how likely an event was, adjusting constantly in the light of new information.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`9. an article with bold text followed by bold link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  2 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Becoming by Michelle Obama
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`10. an article with italic and normal text link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  Family Action is one of two charities being supported by 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  The Times
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                   Coronavirus Charity Appeal
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                   to support people in greatest hardship under the restrictions. The second charity is The Big Issue Foundation.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`11. an article with bold and italic text at the same time 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  Conversations with Friends
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`12. an article with text wrapped in inline element 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  They may have been improved by the controversy that ensued when Watson appeared on the cover of Vanity Fair to promote it, wearing a top that partially exposed her breasts. She rejected criticism that the pose was at odds with her claim to be a feminist. “Feminism is not a stick with which to beat other women. It’s about liberation. It’s about equality,” she said, adding: “I really don’t know what my tits have to do with it.” 
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`13. an article with paragraph with text and inline element 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  20. 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  Participants’ names and general locations will be published if they are the winner of the Competition in accordance with regulatory requirements, both during this and future promotions by the Promoter or any associated or subsidiary company of News Corp UK & Ireland Limited.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`14. an article with inline inside a bold tag 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  Meera Menon, 15, 100min
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`15. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
